Fixed styling and responsive on mobile and tablet mode > content text

--- a/src/assets/css/views/Card/CardText.scss
+++ b/src/assets/css/views/Card/CardText.scss
@@ -3,21 +3,16 @@
   display: grid;
   justify-content: center;
   padding-top: 20px;
-  grid-template-columns: 45px 235px 55px;
+  grid-template-columns: 50px 2fr .3fr;
   grid-template-rows: 40px 86px 30px;
   grid-template-areas:
   'filler name price'
   'number content content'
   'number icon icon';
 
-  @media (min-width: $screen-sm-md) {
-    grid-template-columns: 45px 235px 55px;
-    padding: 10px 10px 0;
-  }
-
-  @media (min-width: $screen-sm-lg) {
-    grid-template-columns: 45px 250px 55px;
-  }
+  @media (max-width: 430px) { padding: 10px 10px 0; }
+  @media (min-width: 431px) { padding: 20px 50px 0; }
+  @media (min-width: 770px) { padding: 20px 20px 0; flex: 1 }
 
   .content-filler {
     grid-area: filler;
@@ -53,7 +48,7 @@
     margin-top: 10px;
 
     h4 {
-      color: #676565;
+      color: $main-border-color;
     }  
   }
 
@@ -61,7 +56,6 @@
     grid-area: content;
     display: flex;
     align-items: flex-start;
-    justify-content: flex-end;
     flex-direction: row;
     border-left: 1px solid $main-secondary-color;
     
@@ -77,7 +71,6 @@
 
   .icon-wrapper {
     grid-area: icon;
-    border-left: 1px solid $main-secondary-color;
   }
 
   .icon-container {
